Add custom validators,createUserAsAdmin functionality and and getPendingActions under AuthStatusController